Bug 92110 - UI Button with keyboard focus has invisible label (KDE-specific)
Summary: UI Button with keyboard focus has invisible label (KDE-specific)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other Linux (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: needsKDE target:5.1.0 target:5.0.0.3
Keywords:
: 91808 92410 92437 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-16 12:38 UTC by Katarina Behrens (Inactive)
Modified: 2016-10-25 19:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of "are you sure you want to close?" dialog demonstrating the problem (44.29 KB, image/png)
2015-06-16 12:38 UTC, Katarina Behrens (Inactive)
Details
LibO start centre as seen with kde4 vcl plugin (55.79 KB, image/png)
2015-06-17 10:44 UTC, Katarina Behrens (Inactive)
Details
5.0.0.2 screenshot (40.27 KB, image/png)
2015-07-05 12:22 UTC, Doug
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2015-06-16 12:38:53 UTC
Created attachment 116579 [details]
Screenshot of "are you sure you want to close?" dialog demonstrating the problem

To reproduce this, you need KDE4 vcl plugin. Just running KDE4 desktop is not enough, it might still use Gtk vcl plugin to render UI. If needed, start LibO like this:

SAL_USE_VCLPLUGIN=kde4 ./soffice 

Once a push button in any dialog (or sidebar or toolbar dropdown) acquires keyboard focus, the text of its label disappears, only this tiny wire frame around the text, marking focus is visible. See attached screenshot. 

The text reappears once keyboard focus moves to the next widget.
Comment 1 Katarina Behrens (Inactive) 2015-06-17 10:44:23 UTC
Created attachment 116603 [details]
LibO start centre as seen with kde4 vcl plugin

This also affects start centre, as you can see on the attached screenshot. "Writer Document" button had keyboard focus when the screenshot was taken -- you can see only blank spot in its place instead. Looks super-ugly
Comment 2 Buovjaga 2015-06-18 05:19:45 UTC
Built with Katarina's build options, on Kubuntu 15.04 64-bit with Plasma 5 I see the same effect.

Version: 5.1.0.0.alpha1+
Build ID: 40dbc52755a905b4437d861360d3b8069d5b53b1
Locale: en-US (en_US.UTF-8)
Comment 3 Stephan van den Akker 2015-06-19 09:30:18 UTC
Build with --enable-kde4 on openSuSE 13.1 and 13.2 I've got the same problem in:

Version: 5.0.0.0.beta1+
Build ID: f25e4aff17aa88b0620b9067f3f4f490f36ca9f6
Locale: en-GB (en_GB.UTF-8)
Comment 4 Maxim Monastirsky 2015-06-30 07:26:21 UTC
*** Bug 92437 has been marked as a duplicate of this bug. ***
Comment 5 tommy27 2015-06-30 08:08:20 UTC
Bug 92437 reported under opensuse 13.2 x86_64 and KDE Platform Version 4.14.8 using LibO 5.0.0.1
Comment 6 Buovjaga 2015-06-30 08:16:48 UTC
This is so visible, I'll set priority to high.
Comment 7 Buovjaga 2015-07-02 13:10:09 UTC
*** Bug 92410 has been marked as a duplicate of this bug. ***
Comment 8 Doug 2015-07-05 12:22:21 UTC
Created attachment 117063 [details]
5.0.0.2 screenshot

Problem persists in LO 5.0.0.2.
Comment 9 Katarina Behrens (Inactive) 2015-07-08 08:55:22 UTC
*** Bug 91808 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2015-07-09 17:24:35 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88e16529fc7b0e312b68e38295348c93b437aad8

tdf#92110 KDE4: cleanup IsNativeControlSupported

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2015-07-09 18:33:58 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93afcb207b62984b02b901d676f945acaa1f8041&h=libreoffice-5-0

tdf#92110 KDE4: cleanup IsNativeControlSupported

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Stephan van den Akker 2015-07-09 20:38:47 UTC
I can confirm this patch fixes the issue. Tested with

LibreOfficeDev version: 5.0.0.2.0+
Build ID: 93afcb207b62984b02b901d676f945acaa1f8041
Locale: nl-NL (en_US.UTF-8)

on openSuSE 13.2 (64-bit) with KDE 4.14.9 and QT 4.8.6
Comment 13 Doug 2015-07-16 11:17:08 UTC
Confirmed fixed blocked button label OpenSuse 13.2/KDE 4.14.9 using:  LO Version: 5.0.0.3 / Build ID: 00m0(Build:3) / Locale: en-US (en_US.UTF-8).

Confirmed checkbox artifact fixed in that version as well. (see bug 92558 and bug 91808 merged into this one).