tdf#92110 KDE4: cleanup IsNativeControlSupported

Be (more) correct about the widgets and parts, we actually can draw
natively in KDE4.

Also add an assert, so drawNativeControl won't be called with values
not supported by IsNativeControlSupported.

Change-Id: Iac6c78194191a9cd059ace560c285263ce7c1045